# lang-segment-anything

./: .dockerignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-publish.yml
src/lang_sam/: app.py  lang_sam.py  predict.py  utils.py
src/lang_sam/models/: gdino.py  sam.py
