[project]
name = "lang-sam"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "YouSiki", email = "you.siki@outlook.com" }]
dependencies = [
    "gradio>=5.16.1",
    "litserve>=0.2.6",
    "opencv-python-headless>=4.11.0.86",
    "pydantic>=2.10.6",
    "sam-2 @ git+https://github.com/facebookresearch/segment-anything-2@c2ec8e14a185632b0a5d8b161928ceb50197eddc",
    "supervision>=0.25.1",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.49.0",
    "uvloop>=0.21.0",
    "tyro>=0.9.16",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
app = "lang_sam.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/lang_sam"]

[tool.ruff.lint]
select = ["I"]
